# kardos

./: .gitignore  Cargo.toml  Makefile  README.md  build_image_run.sh  build_run.sh
.cargo/: config.toml
kardos-bootloader/: Cargo.toml
kardos-bootloader/src/: main.rs
kardos-kernel/: Cargo.toml  build.rs  x86_64-unknown-none-elf.json
kardos-kernel/.cargo/: config
kardos-kernel/src/: console.rs  graphics.rs  main.rs
kardos-loader/: Cargo.toml
kardos-loader/src/: main.rs
src/: main.rs  vga_buffer.rs
