[package]
name = "kardos-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.14.0", features = ["alloc","exts","logger"] }
uefi-services = "0.11.0"
log = {version = "0.4", default-features = false}
goblin = {version = "0.4", features = ["elf32", "elf64", "endian_fd"], default-features = false}
